--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # OpenWakeWord and core dependencies
 openwakeword==0.6.0
-numpy>=1.21.0
+numpy<2.0.0,>=1.21.0
 onnxruntime>=1.10.0
 tflite-runtime>=2.7.0
 
