--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,8 @@ dependencies = [
     "prometheus-client>=0.19.0",
     "requests>=2.31.0",
     "gevent>=24.0.0",
+    "tflite-runtime>=2.14.0; platform_machine=='aarch64'",
+    "tensorflow>=2.10.0; platform_machine!='aarch64'",
 ]
 
 [project.optional-dependencies]
