--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-# OpenWakeWord and core dependencies
-openwakeword==0.6.0
+# Core dependencies
 numpy<2.0.0,>=1.21.0
 onnxruntime>=1.10.0
-tflite-runtime>=2.14.0
+tqdm>=4.0
+scipy>=1.3
+scikit-learn>=1.0
 
 # Audio processing
 pyaudio>=0.2.11
