--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ onnxruntime>=1.10.0
 tqdm>=4.0
 scipy>=1.3
 scikit-learn>=1.0
+tflite-runtime>=2.7.0; platform_machine=='x86_64'
 
 # Audio processing
 pyaudio>=0.2.11
