--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ onnxruntime>=1.10.0
 tqdm>=4.0
 scipy>=1.3
 scikit-learn>=1.0
-tflite-runtime>=2.7.0; platform_machine=='x86_64'
+tflite-runtime>=2.7.0
 
 # Audio processing
 pyaudio>=0.2.11
@@ -21,6 +21,7 @@ pyaudio>=0.2.11
 
 # System utilities (minimal for M1)
 requests>=2.25.0                # Required by OpenWakeWord for model downloads
+psutil>=5.8.0                   # Required for system metrics collection
 # pyyaml>=6.0                     # Removed for M1 - not using YAML config yet
 
 # Optional but recommended for better performance
