--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     
     # Volume mounts
     volumes:
+      - ./src:/app/src  # Mount source code for live updates
       - ./logs:/app/logs
       - ./recordings:/app/recordings
       - /tmp:/tmp
@@ -23,6 +24,8 @@ services:
       - ./third_party/openwakeword/custom_models:/app/third_party/openwakeword/custom_models
       # Cache downloaded OpenWakeWord models
       - ./model_cache:/root/.local/share/openwakeword
+      # Mount custom TFLite models
+      - ./models:/app/models
     
     # Environment variables
     environment:
