--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   wake-word-test:
     build: .
     container_name: wake-word-test
-    command: python3 -m hey_orac.wake_word_detection --input-wav /app/recordings/wake_word_test_20250718_131542.wav
+    command: python3 -m hey_orac.wake_word_detection
     restart: unless-stopped
     
     # Audio device access
