--- a/requirements.txt
+++ b/requirements.txt
@@ -11,12 +11,16 @@ pyaudio>=0.2.11
 # soundfile>=0.10.0               # Removed for M1 - not needed for basic detection
 # librosa>=0.9.0                  # Removed for M1 - heavy dependency, not needed
 
-# Configuration and utilities (minimal for M1)
-# flask>=3.0.0                    # Removed for M1 - add back in M3/M4
-# flask-socketio>=5.3.0           # Removed - was causing gevent build issues
-# gevent>=24.0.0                  # Removed - heavy compilation on ARM64
+# Web GUI and API
+flask>=3.0.0
+flask-socketio>=5.3.0
+flask-cors>=4.0.0
+python-socketio>=5.10.0         # For WebSocket support
+eventlet>=0.33.0                # Lighter than gevent for ARM64
+
+# Configuration and utilities
+jsonschema>=4.20.0              # For config validation
 # structlog>=24.0.0               # Removed for M1 - using basic logging
-# jsonschema>=4.20.0              # Removed for M1 - add back in M2
 # prometheus-client>=0.19.0       # Removed for M1 - add back in M2
 
 # System utilities (minimal for M1)
