--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ flask>=3.0.0
 flask-socketio>=5.3.0
 flask-cors>=4.0.0
 python-socketio>=5.10.0         # For WebSocket support
-eventlet>=0.33.0                # Lighter than gevent for ARM64
+# eventlet>=0.33.0                # Removed - using threading mode instead
 
 # Configuration and utilities
 jsonschema>=4.20.0              # For config validation
