Phase 1-2 complete: Add PreprocessingManager and extract audio functions

--- a/config/settings.json.template
+++ b/config/settings.json.template
@@ -64,7 +64,8 @@
     "multi_trigger": false,
     "rms_filter": 50.0,
     "cooldown": 2.0,
-    "vad_threshold": 0.5
+    "vad_threshold": 0.5,
+    "enable_audio_preprocessing": false
   },
   "stt": {
     "enabled": true,
